# deep-learning-exercise

./: README.md
minhhnh/: README.rst  pyproject.toml
minhhnh/minhhnh/: main.ipynb
minhhnh/minhhnh/dataset/: dataset.py
minhhnh/minhhnh/layers/: dense.py  layer.py  neural_network.py  relu.py
minhhnh/minhhnh/trainer/: trainer.py
