[tool.poetry]
name = "minhhnh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "^1.4.3"
tqdm = "^4.64.0"
matplotlib = "^3.5.2"
ipykernel = "^6.15.0"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
